<resources>
    <string name="app_name">SteamMarketHelper</string>
    <string name="inventory">Inventory</string>
    <string name="market">Market</string>
    <string name="settings">Settings</string>
    <string name="go_up">Go up</string>
    <string name="market_count">%1$d pcs.</string>
    <string name="search">Search</string>
    <string name="search_completed">Search completed</string>
    <string name="workshop_button_text">View Workshop item</string>
    <string name="sell_listings">Sell listings</string>
    <string name="sell_listings_placeholder">Sell listings: %1$s</string>
    <string name="buy_orders">Buy orders</string>
    <string name="buy_orders_placeholder">Buy orders: %1$s</string>
    <string name="item_picture">Item picture</string>
    <string name="price">Price</string>
    <string name="count">Count</string>
    <string name="steam_auth">Steam Authentication</string>
    <string name="info_error">Market info for this item isn\'t available</string>
    <string name="wallet_balance_not_set">Wallet balance: </string>
    <string name="wallet_balance">Wallet balance: %1$s</string>
    <string name="tradeban_days">%1$dD</string>
    <string name="tradeban_hours">%1$dH</string>
    <string name="add_favorites">Added %1$s to favorites</string>
    <string name="remove_favorites">Removed %1$s from favorites</string>
    <string name="hint">Select a game. Long click to add game to favorites.</string>
    <string name="game_icon">Game icon</string>
    <string name="listings">Listings</string>
    <string name="theme">Theme</string>
    <string name="select_theme">Choose UI theme</string>
    <string name="system_default">System default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="ui">UI</string>
    <string name="my_sell_listings">My sell listings</string>
    <string name="my_buy_orders">My buy orders</string>
    <string name="my_sell_listings_placeholder">My sell listings (%1$d)</string>
    <string name="my_buy_orders_placeholder">My buy orders (%1$d)</string>
    <string name="listed_on">Listed on: %1$s</string>
    <string name="quantity">Quantity: %1$s</string>
    <string name="you_receive">You receive</string>
    <string name="buyer_pays">Buyer pays</string>
    <string name="sell">Put for sale</string>
    <string name="not_available">N/A</string>
    <string name="incorrect_price">Price is incorrect</string>
    <string name="not_marketable">Selected item is not marketable</string>
    <string name="failed_sell">Failed to make sell request</string>
    <string name="sell_success">Your item was listed for sale</string>
    <string name="sell_mobile_confirmation">Confirmation was sent on your phone</string>
    <string name="sell_email_confirmation">Confirmation was sent on your e-mail</string>
    <string name="inventory_hint">Click on item to view its details. Long click to sell it.</string>
    <string name="you_pay">You pay</string>
    <string name="buy">Place buy order</string>
    <string name="amount">Amount</string>
    <string name="max_price">Maximum price: %1$s %2$.2f</string>
    <string name="incorrect_amount">Incorrect amount</string>
    <string name="amount_zero">Amount must be greater than 0</string>
    <string name="failed_buy">Failed to make buy request</string>
    <string name="buy_success">Created buy order successfully</string>
    <string name="market_hint">Click on item to view its details. Long click to create buy order.</string>
    <string name="sell_remove">Remove sell listing</string>
    <string name="buy_remove">Remove buy order</string>
    <string name="sell_remove_successful">Sell listing was removed</string>
    <string name="buy_remove_successful">Buy order was removed</string>
    <string name="sell_remove_failed">Failed to remove sell listing</string>
    <string name="buy_remove_failed">Failed to remove buy order</string>
    <string name="listings_hint">Click on listing to view its details.Swipe to remove it.</string>
    <string name="listings_remove_confirmation">Are you sure you want to remove the listing?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="market_action_warning_title">Warning</string>
    <string name="market_action_warning">You are going to make commerce action, but it seems, that Steam can count it as Market bots, which are against its ToS. So I (developer of the application) am not responsible for your account (in case of ban e.g.). Continue at your own risk.</string>
    <string name="market_action_continue">Continue</string>
    <string name="market_action_cancel">Cancel</string>
    <string name="market_action_canceled">Action was canceled</string>
    <string name="columns">Columns</string>
    <string name="columns_market">Change columns count in Market</string>
    <string name="columns_inventory">Change columns count in Inventory</string>
</resources>