<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_market" >

    <fragment
        android:id="@+id/navigation_inventory"
        android:name="com.voxeldev.steammarkethelper.ui.inventory.InventoryFragment"
        android:label="@string/inventory"
        tools:layout="@layout/fragment_inventory" >
    </fragment>

    <fragment
        android:id="@+id/navigation_market"
        android:name="com.voxeldev.steammarkethelper.ui.market.MarketFragment"
        android:label="@string/market"
        tools:layout="@layout/fragment_market" >
    </fragment>

    <fragment
        android:id="@+id/navigation_listings"
        android:name="com.voxeldev.steammarkethelper.ui.listings.ListingsFragment"
        android:label="@string/listings"
        tools:layout="@layout/fragment_listings" >
    </fragment>
</navigation>