<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="15dp"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingBottom="10dp">
    <ImageView
        android:id="@+id/iteminfo_sheetpin"
        android:layout_width="38dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@null"
        android:src="@drawable/sheet_pin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iteminfo_sheetpin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/iteminfo_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/iteminfo_imageview"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/item_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/iteminfo_itemtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iteminfo_imageview"
                tools:text="Whiteout Pants" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/iteminfo_workshopbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/workshop_button_text"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iteminfo_itemtitle"
                tools:visibility="visible" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/iteminfo_loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:indeterminate="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iteminfo_workshopbutton" />

            <TextView
                android:id="@+id/iteminfo_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/info_error"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iteminfo_loader" />

            <LinearLayout
                android:id="@+id/iteminfo_listings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/iteminfo_loader">

                <TextView
                    android:id="@+id/iteminfo_selllistings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sell_listings"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/BottomNav"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true"
                    app:strokeColor="@color/CardStroke"
                    app:strokeWidth="1dp">

                    <TableLayout
                        android:id="@+id/iteminfo_selltablelayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:background="@color/CardStroke"
                        tools:layout_height="100dp">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/tablerow_border_bottom">

                            <TextView
                                android:layout_weight="0.5"
                                android:padding="5dp"
                                android:text="@string/price"
                                android:textAlignment="center"
                                android:textColor="@color/textColor"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_weight="0.5"
                                android:padding="5dp"
                                android:text="@string/count"
                                android:textAlignment="center"
                                android:textColor="@color/textColor"
                                android:textSize="20sp" />
                        </TableRow>
                    </TableLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/iteminfo_buyorders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/buy_orders"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/BottomNav"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true"
                    app:strokeColor="@color/CardStroke"
                    app:strokeWidth="1dp">

                    <TableLayout
                        android:id="@+id/iteminfo_buyTableLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/iteminfo_buyorders"
                        tools:background="@color/CardStroke"
                        tools:layout_height="100dp">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/tablerow_border_bottom">

                            <TextView
                                android:layout_weight="0.5"
                                android:padding="5dp"
                                android:text="@string/price"
                                android:textAlignment="center"
                                android:textColor="@color/textColor"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_weight="0.5"
                                android:padding="5dp"
                                android:text="@string/count"
                                android:textAlignment="center"
                                android:textColor="@color/textColor"
                                android:textSize="20sp" />
                        </TableRow>
                    </TableLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/iteminfo_pricechart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:minHeight="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iteminfo_listings" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>