<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listings_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp"
    xmlns:tools="http://schemas.android.com/tools" >

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/listings_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/listings_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/listings_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/listings_hint"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listings_hint">

            <TextView
                android:id="@+id/listings_sell_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/my_sell_listings"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listings_sell_recyclerview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/listings_guideline_half"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listings_sell_textview"
                tools:listitem="@layout/item_listingsrecyclerview" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/listings_guideline_half"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/listings_buy_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/my_buy_orders"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listings_guideline_half" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listings_buy_recyclerview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listings_buy_textview"
                tools:listitem="@layout/item_listingsrecyclerview" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>