<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/balance_cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/BottomNav"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:strokeWidth="1dp"
        app:strokeColor="@color/CardStroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/balance_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet_balance_not_set"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/balance_loader"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:indeterminate="true"
                app:indicatorSize="18dp"
                app:trackThickness="2dp"
                app:layout_constraintBottom_toBottomOf="@id/balance_textview"
                app:layout_constraintStart_toEndOf="@id/balance_textview"
                app:layout_constraintTop_toTopOf="@id/balance_textview" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_games"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balance_cardview">

        <TextView
            android:id="@+id/hint_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/hint"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/games_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hint_textview"
            tools:listitem="@layout/item_gamesrecyclerview" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loader_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        app:layout_constraintBottom_toTopOf="@+id/settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balance_cardview" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/settings"
        android:textSize="15sp"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >
    </com.google.android.material.button.MaterialButton>
</androidx.constraintlayout.widget.ConstraintLayout>